--- a/MvcAppHelloWorld/4_BusinessObjectModel/4_BusinessObjectModel.csproj
+++ b/MvcAppHelloWorld/4_BusinessObjectModel/4_BusinessObjectModel.csproj
@@ -137,9 +137,9 @@
     <Compile Include="College.cs" />
     <Compile Include="HighSchool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Roles.cs" />
+    <Compile Include="Role.cs" />
     <Compile Include="UserRole.cs" />
-    <Compile Include="Users.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
