--- a/MvcAppHelloWorld/3_DataAccess/3_DataAccess.csproj
+++ b/MvcAppHelloWorld/3_DataAccess/3_DataAccess.csproj
@@ -135,8 +135,8 @@
     <Compile Include="College\CollegeRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\RolesRepository.cs" />
-    <Compile Include="Students\IStudentsRepository.cs" />
-    <Compile Include="Students\StudentsRepository.cs" />
+    <Compile Include="Generic\IGenericRepository.cs" />
+    <Compile Include="Generic\GenericRepository.cs" />
     <Compile Include="HighSchool\HighSchoolRepository.cs" />
     <Compile Include="TuxContext.cs" />
   </ItemGroup>
