--- a/MvcAppHelloWorld/4_BusinessObjectModel/4_BusinessObjectModel.csproj
+++ b/MvcAppHelloWorld/4_BusinessObjectModel/4_BusinessObjectModel.csproj
@@ -139,7 +139,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="UserRole.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
