--- a/MvcAppHelloWorld/BusinessLayer/2_BusinessLayer.csproj
+++ b/MvcAppHelloWorld/BusinessLayer/2_BusinessLayer.csproj
@@ -135,9 +135,9 @@
     <Compile Include="College\CollegeService.cs" />
     <Compile Include="HighSchool\HighSchoolService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Roles\RolesService.cs" />
-    <Compile Include="Students\IStudentsService.cs" />
-    <Compile Include="Students\StudentsService.cs" />
+    <Compile Include="Role\RolesService.cs" />
+    <Compile Include="Students\IGenericService.cs" />
+    <Compile Include="Students\GenericService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
