--- a/MvcAppHelloWorld/4_BusinessObjectModel/4_BusinessObjectModel.csproj
+++ b/MvcAppHelloWorld/4_BusinessObjectModel/4_BusinessObjectModel.csproj
@@ -134,8 +134,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
     <Compile Include="College.cs" />
     <Compile Include="HighSchool.cs" />
+    <Compile Include="Login.cs" />
+    <Compile Include="Professor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="UserRole.cs" />
