--- a/MvcAppHelloWorld/BusinessLayer/2_BusinessLayer.csproj
+++ b/MvcAppHelloWorld/BusinessLayer/2_BusinessLayer.csproj
@@ -134,10 +134,12 @@
   <ItemGroup>
     <Compile Include="College\CollegeService.cs" />
     <Compile Include="HighSchool\HighSchoolService.cs" />
+    <Compile Include="Pofessor\ProfessorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role\RolesService.cs" />
-    <Compile Include="Students\IGenericService.cs" />
-    <Compile Include="Students\GenericService.cs" />
+    <Compile Include="Generic\IGenericService.cs" />
+    <Compile Include="Generic\GenericService.cs" />
+    <Compile Include="User\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
