--- a/MvcAppHelloWorld/MvcAppHelloWorld/1_Presentation.csproj
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/1_Presentation.csproj
@@ -187,13 +187,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CollegeStudentsController.cs" />
     <Compile Include="Controllers\HighSchoolStudentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ProfessorController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\GenericController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -240,18 +242,22 @@
     <Content Include="Views\HighSchoolStudents\Create.cshtml" />
     <Content Include="Views\CollegeStudents\Details.cshtml" />
     <Content Include="Views\CollegeStudents\Create.cshtml" />
-    <Content Include="Views\Students\Index.cshtml" />
     <Content Include="Views\Shared\_Create.cshtml" />
     <Content Include="Views\Shared\_Edit.cshtml" />
     <Content Include="Views\Shared\_Details.cshtml" />
     <Content Include="Views\Shared\_EditCollegeStudents.cshtml" />
     <Content Include="Views\Shared\_Modal.cshtml" />
     <Content Include="Views\Register\Index.cshtml" />
-    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Roles\Details.cshtml" />
     <Content Include="Views\Roles\Create.cshtml" />
     <Content Include="Views\Roles\Edit.cshtml" />
+    <Content Include="Views\Professor\Index.cshtml" />
+    <Content Include="Views\Professor\Create.cshtml" />
+    <Content Include="Views\Professor\Details.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
