--- a/MvcAppHelloWorld/MvcAppHelloWorld/bin/MvcAppHelloWorld.dll.config
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/bin/MvcAppHelloWorld.dll.config
@@ -22,7 +22,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
 	  <authentication>
-		  <forms cookieless="UseCookies" defaultUrl="/Login/Login" slidingExpiration="true"></forms>
+		  <forms cookieless="UseCookies" defaultUrl="/Home/Login" slidingExpiration="true"></forms>
 	  </authentication>
   </system.web>
   <runtime>
