--- a/MvcAppHelloWorld/3_DataAccess/3_DataAccess.csproj
+++ b/MvcAppHelloWorld/3_DataAccess/3_DataAccess.csproj
@@ -143,7 +143,7 @@
     <Compile Include="User\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="User\App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
