--- a/MvcAppHelloWorld/MvcAppHelloWorld/1_Presentation.csproj
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/1_Presentation.csproj
@@ -270,7 +270,7 @@
     <Folder Include="ApplicationServices\" />
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="ViewModel\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
