--- a/MvcAppHelloWorld/MvcAppHelloWorld/1_Presentation.csproj
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/1_Presentation.csproj
@@ -46,6 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.10.1.1\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="BouncyCastle.Crypto, Version=1.9.0.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
       <HintPath>..\packages\Portable.BouncyCastle.1.9.0\lib\net40\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
@@ -196,6 +199,7 @@
     <Compile Include="ApplicationService\ProfessorAppService\ProfessorAppService.cs" />
     <Compile Include="ApplicationService\Role\RoleAppService.cs" />
     <Compile Include="ApplicationService\UserAppService\UserAppService.cs" />
+    <Compile Include="App_Start\AutoMappingProfile.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -214,7 +218,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CollegeViewModel.cs" />
+    <Compile Include="ViewModels\GenericViewModel.cs" />
     <Compile Include="ViewModels\HighSchoolViewModel.cs" />
+    <Compile Include="ViewModels\ProfessorViewModel.cs" />
+    <Compile Include="ViewModels\RoleViewModel.cs" />
+    <Compile Include="ViewModels\UsersViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
